# claude-agent

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  pixi.toml  pyproject.toml  tmp_tdd_plan_config.md
.claude/: settings.local.json
docs/: architecture.md  cli-plan.md  cli-spec.md  cost_control.md  step2.md  token-efficiency.md
hooks/: pre-commit
src/claude_agent/: __init__.py  config.py  exceptions.py  tool_registry.py  tools.py
src/claude_agent/cli/: __init__.py  cost_tool.py  loop.py  main.py  output.py  pricing.py  protocols.py  session.py  streaming.py
src/claude_agent/tools/: __init__.py  bash.py  code_search.py  cost.py  edit_file.py  list_files.py  read_file.py
src/coding_agent/: __init__.py  agent.py  bash.py  chat.py  code_search.py  edit.py  list_files.py  read.py  tools.py
src/coding_agent/cli/: __init__.py  commands.py  input.py  loop.py  main.py  output.py  protocols.py  session.py  streaming.py
tests/: fakes.py  test_anthropic_stream.py  test_cancellation.py  test_check_cost.py  test_commands.py  test_config.py  test_input.py  test_input_loop.py  test_main.py  test_output.py  test_pricing.py  test_session.py  test_sliding_window.py  test_streaming.py  test_tool_loop.py  test_tool_registry.py  test_tools.py
tests/fixtures/: __init__.py
tests/fixtures/plugins/: __init__.py  _private_plugin.py  no_tools_plugin.py  valid_plugin.py
